--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@ this is the Index.md page that has loaded
 
 <html>
   <body>
-    <h1 style="color:pink;font-size:78px:> World Famous Artisan </h1>
-    <a href="/Test.html"> go here. </a>
+    <h1 style="color:pink;font-size:78px:> "World Famous Artisan" </h1>
+    <a href="/Test.html"> "go here." </a>
   </body>
 </html>
