--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <docutype html>
 <html>
   <body>
-    <h1 style="color:pink;font-size:78px:"> World Famous Artisan </h1>
+    <h1 style="color:pink;font-size:160px;text-align:center;"> World Famous Artisan </h1>
     <p> test test test <a href="/Test.html">test</a> test </p>
   </body>
 </html>
