--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <docutype html>
 <html>
   <body>
-    <h1 style="color:pink;font-size:160px;text-align:center;"> World Famous Artisan </h1>
-    <p> test test test <a href="/Test.html">test</a> test </p>
+    <h1 style="color:pink;font-size:80px;text-align:center;"> World Famous Artisan </h1>
+    <p> 
+      <a href="https://www.youtube.com/">Youtube</a> 
+      <a href="https://www.dawnsomewhere.com/">Dawn Somewhere</a> 
+      <a href="/index.html">Home</a> 
+      <a href="/Test.html">test</a> 
+    </p>
   </body>
 </html>
