--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <body>
     <h1 style="color:pink;font-size:80px;text-align:center;"> World Famous Artisan </h1>
-    <p> 
+    <h2 style="font-size:24px;text-align:center;"> 
       <a href="https://www.youtube.com/">Youtube</a> 
       <a href="https://www.dawnsomewhere.com/">Dawn Somewhere</a> 
       <a href="/index.html">Home</a> 
       <a href="/Test.html">test</a> 
-    </p>
+    </h2>
   </body>
 </html>
