--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <body>
     <h1 style="color:pink;font-size:80px;text-align:center;"> World Famous Artisan </h1>
     <h2 style="font-size:24px;text-align:center;"> 
-      <a href="https://www.youtube.com/">Youtube</a> 
-      <a href="https://www.dawnsomewhere.com/">Dawn Somewhere</a> 
-      <a href="/index.html">Home</a> 
-      <a href="/Test.html">test</a> 
+      | <a href="https://www.youtube.com/">Youtube</a> |
+      <a href="https://www.dawnsomewhere.com/">Dawn Somewhere</a> |
+      <a href="/index.html">Home</a> |
+      <a href="/Test.html">test</a> |
     </h2>
   </body>
 </html>
