--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <docutype html>
 <html>
-  <body>
+  <body style="background-color:powderblue">
     <h1 style="color:pink;font-size:80px;text-align:center;"> World Famous Artisan </h1>
-    <h2 style="font-size:24px;text-align:center;"> 
+    <h2 style="font-size:24px;text-align:center;background-color:green;"> 
       | <a href="https://www.youtube.com/">Youtube</a> |
       <a href="https://www.dawnsomewhere.com/">Dawn Somewhere</a> |
       <a href="/index.html">Home</a> |
