--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <body style="background-color:powderblue">
     <h1 style="color:pink;font-size:80px;text-align:center;"> World Famous Artisan </h1>
-    <h2 style="font-size:24px;text-align:center;background-color:green;"> 
+    <h2 style="font-size:24px;text-align:center;background-color:lightblue;"> 
       | <a href="https://www.youtube.com/">Youtube</a> |
       <a href="https://www.dawnsomewhere.com/">Dawn Somewhere</a> |
       <a href="/index.html">Home</a> |
