--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <docutype html>
 <html>
-  <body style="background-color:powderblue">
+  <body style="background-color:#ffd6db">
     <h1 style="color:pink;font-size:80px;text-align:center;"> World Famous Artisan </h1>
     <h2 style="font-size:24px;text-align:center;background-color:lightblue;"> 
       | <a href="https://www.youtube.com/">Youtube</a> |
