--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
   <body style="background-color:#ffd6db">
     <h1 style="color:pink;font-size:80px;text-align:center;"> World Famous Artisan </h1>
-    <h2 style="font-size:24px;text-align:center;background-color:lightblue;"> 
+    <h2 style="color:#ea4486;font-size:24px;text-align:center;background-color:lightblue;"> 
       | <a href="https://www.youtube.com/">Youtube</a> |
       <a href="https://www.dawnsomewhere.com/">Dawn Somewhere</a> |
       <a href="/index.html">Home</a> |
       <a href="/Test.html">test</a> |
     </h2>
+    <p style="color:#ea4486;"> The first Paragraph of this site was written long ago, in it's place now stands this paragraph. a shadow of a shadow, gold nugget crocodile leather chicken burger cheese curd cable car credit ball score squid game nakama one piece orange juice </p>
   </body>
 </html>
