--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <body style="background-color:#ffd6db">
     <h1 style="color:pink;font-size:80px;text-align:center;"> World Famous Artisan </h1>
     <h2 style="color:#ea4486;font-size:24px;text-align:center;background-color:lightblue;"> 
-      | <a href="https://www.youtube.com/">Youtube</a> |
-      <a href="https://www.dawnsomewhere.com/">Dawn Somewhere</a> |
-      <a href="/index.html">Home</a> |
-      <a href="/Test.html">test</a> |
+      | <a href="/index.html">Home</a> |
+      <a href="https://m.youtube.com/channel/UCj1pLz_ytvqdNwIVP03ck9g">Videos</a> |
+      <a href="https://bubblegumstudios.itch.io/">Games</a> |
+      <a href="https://questden.org/wiki/ArtisanBubblegum">Comics</a> |
     </h2>
     <p style="color:#ea4486;"> The first Paragraph of this site was written long ago, in it's 
       place now stands this paragraph. a shadow of a shadow, 
