--- a/index.html
+++ b/index.html
@@ -16,5 +16,13 @@
     <p style="color:#ea4486;"> car space nickel plate cane for an able plane
       Disco inferno Broken Machine designed fight cant escape from crossing Fate
       A bumblebees death over a thousand grains of polyester. </p>
+    <form>
+         Entry 1:<br> <input type="text" name="name">
+         <br>
+         Entry 2:<br> <input type="text" name="subject">
+         <br>
+         Rank:<br> <input type="text" name="rank">
+      </form>
+    
   </body>
 </html>
