--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <docutype html>
 <html>
-  <link rel="shortcut icon" type="image/x-icon" href="prof horse.jpg">
+  <head>
+    <title> world famous title </title>
+    <link rel="icon" type="image/x-icon" href="prof horse.png">
+  </head>
   <body style="background-color:#ffd6db">
     <h1 style="color:#ea4486;font-size:80px;text-align:center;"> World Famous Artisan </h1>
     <h2 style="color:black;font-size:24px;text-align:center;background-color:lightblue;"> 
