--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <docutype html>
 <html>
   <head>
-    <title> alt world famous title </title>
-    <link rel="icon" type="image/x-icon" href="/favicon-32x32.png">
+    <title> w world famous title </title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
   </head>
   <body style="background-color:#ffd6db">
     <h1 style="color:#ea4486;font-size:80px;text-align:center;"> World Famous Artisan </h1>
