--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <docutype html>
 <html>
   <head>
-    <title> w world famous title </title>
+    <title>World Famous Artisan</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
   <body style="background-color:#ffd6db">
@@ -13,7 +13,7 @@
       <a style="color:#ea4486" href="https://questden.org/wiki/ArtisanBubblegum">Comics</a> |
     </h2>
     <p style="color:#ea4486;"> The first Paragraph of this site was written long ago, in it's 
-      place now stands this paragraph. a shadow of a shadow, 
+      place now stands this paragraph. <br>a shadow of a shadow, 
       gold nugget crocodile leather chicken burger cheese curd 
       cable car credit ball score squid game nakama one piece 
       orange juice </p>
