--- a/index.html
+++ b/index.html
@@ -11,22 +11,10 @@
       <a style="color:#ea4486" href="https://m.youtube.com/channel/UCj1pLz_ytvqdNwIVP03ck9g">Videos</a> |
       <a style="color:#ea4486" href="https://bubblegumstudios.itch.io/">Games</a> |
       <a style="color:#ea4486" href="https://questden.org/wiki/ArtisanBubblegum">Comics</a> |
+      <a style="color:#ea4486" href="https://discord.gg/V782kvCh9h">Discord</a> |
     </h2>
-    <p style="color:#ea4486;"> The first Paragraph of this site was written long ago, in it's 
-      place now stands this paragraph. <br>a shadow of a shadow, 
-      gold nugget crocodile leather chicken burger cheese curd 
-      cable car credit ball score squid game nakama one piece 
-      orange juice </p>
-    <p style="color:#ea4486;"> car space nickel plate cane for an able plane
-      Disco inferno Broken Machine designed fight cant escape from crossing Fate
-      A bumblebees death over a thousand grains of polyester. </p>
-    <form>
-         Entry 1:<br> <input type="text" name="name">
-         <br>
-         Entry 2:<br> <input type="text" name="subject">
-         <br>
-         Rank:<br> <input type="text" name="rank">
-      </form>
-    
+    <br>
+    <br>
+    <p style="color:#ea4486;text-align:center;"> There is no News at this time!</p>    
   </body>
 </html>
