--- a/index.html
+++ b/index.html
@@ -17,4 +17,11 @@
     <br>
     <p style="color:#ea4486;text-align:center;"> There is no News at this time!</p>    
   </body>
+  <form align="center">
+    <label for="fname">First name:</label><br>
+    <input type="text" id="fname" name="fname"><br>
+    <label for="lname">Last name:</label><br>
+    <input type="text" id="lname" name="lname">
+    <input type="submit" value="Enter">
+  </form>
 </html>
