--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>World Famous Artisan</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
-  <body style="background-color:#ffd6db">
+  <body style="background-color:fname">
     <h1 style="color:#ea4486;font-size:80px;text-align:center;"> World Famous Artisan </h1>
     <h2 style="color:black;font-size:24px;text-align:center;background-color:lightblue;"> 
       | <a style="color:#ea4486" href="/index.html">Home</a> |
