--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>World Famous Artisan</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
-  <body style="background-color:fname">
+  <body style="background-color:bgcolor">
     <h1 style="color:#ea4486;font-size:80px;text-align:center;"> World Famous Artisan </h1>
     <h2 style="color:black;font-size:24px;text-align:center;background-color:lightblue;"> 
       | <a style="color:#ea4486" href="/index.html">Home</a> |
@@ -21,7 +21,9 @@
     <label for="fname">First name:</label><br>
     <input type="text" id="fname" name="fname"><br>
     <label for="lname">Last name:</label><br>
-    <input type="text" id="lname" name="lname">
+    <input type="text" id="lname" name="lname"><br>
+    <label for="bgcolor">Background Color:</label><br>
+    <input type="color" id="bgcolor" name="bgcolor"><br>
     <input type="submit" value="Enter">
   </form>
 </html>
