--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>World Famous Artisan</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
-  <body bgcolor="#ffd1ab">
+  <body bgcolor="?bagcolor">
     <h1 style="color:#ea4486;font-size:80px;text-align:center;"> World Famous Artisan </h1>
     <h2 style="color:black;font-size:24px;text-align:center;background-color:lightblue;"> 
       | <a style="color:#ea4486" href="/index.html">Home</a> |
@@ -22,8 +22,8 @@
     <input type="text" id="fname" name="fname"><br>
     <label for="lname">Last name:</label><br>
     <input type="text" id="lname" name="lname"><br>
-    <label for="bgcolor">Background Color:</label><br>
-    <input type="color" id="bgcolor" name="bgcolor" value="#ffd6db"><br>
+    <label for="bagcolor">Background Color:</label><br>
+    <input type="color" id="bagcolor" name="bagcolor" value="#ffd6db"><br>
     <input type="submit" value="Enter">
   </form>
 </html>
