--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="stylesheet" href="styles.css">
   </head>
-  <body style="background-color:#ffd6db">
+  <body>
     <h1 style="color:#ea4486;font-size:80px;text-align:center;"> World Famous Artisan </h1>
     <h2 style="color:black;font-size:24px;text-align:center;background-color:lightblue;"> 
       | <a style="color:#ea4486" href="/index.html">Home</a> |
@@ -16,7 +16,8 @@
     </h2>
     <br>
     <br>
-    <p style="color:#ea4486;text-align:center;"> There is no News at this time!</p>    
+    <p style="color:#ea4486;text-align:center;"> There is no News at this time!</p>
+    <p> red words go here </p>
   </body>
   <form align="center">
     <label for="fname">First name:</label><br>
