--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1 style="color:#ea4486;font-size:80px;text-align:center;"> World Famous Artisan </h1>
-    <h2 style="color:black;font-size:24px;text-align:center;background-color:lightblue;"> 
-      | <a style="color:#ea4486" href="/index.html">Home</a> |
-      <a style="color:#ea4486" href="https://m.youtube.com/channel/UCj1pLz_ytvqdNwIVP03ck9g">Videos</a> |
-      <a style="color:#ea4486" href="https://bubblegumstudios.itch.io/">Games</a> |
-      <a style="color:#ea4486" href="https://questden.org/wiki/ArtisanBubblegum">Comics</a> |
-      <a style="color:#ea4486" href="https://discord.gg/V782kvCh9h">Discord</a> |
+    <h1> World Famous Artisan </h1>
+    <h2> 
+      | <a href="/index.html">Home</a> |
+      <a href="https://m.youtube.com/channel/UCj1pLz_ytvqdNwIVP03ck9g">Videos</a> |
+      <a href="https://bubblegumstudios.itch.io/">Games</a> |
+      <a href="https://questden.org/wiki/ArtisanBubblegum">Comics</a> |
+      <a href="https://discord.gg/V782kvCh9h">Discord</a> |
     </h2>
     <br>
     <br>
-    <p style="color:#ea4486;text-align:center;"> There is no News at this time!</p>
+    <p> There is no News at this time!</p>
     <p> red words go here </p>
   </body>
   <form align="center">
