--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <p> There is no News at this time!</p>
     <p> red words go here </p>
   </body>
-  <form align="center">
+  <form align="center" onsubmit="myFunction()">
     <label for="fname">First name:</label><br>
     <input type="text" id="fname" name="fname"><br>
     <label for="lname">Last name:</label><br>
     <input type="text" id="lname" name="lname"><br>
     <label for="bagcolor">Background Color:</label><br>
     <input type="color" id="bagcolor" name="bagcolor" value="#ffd6db"><br>
-    <input type="submit" value="Enter">
+    <input type="submit" value="Enter" >
   </form>
 </html>
