--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1> World Famous Artisan </h1>
+    <h1 id="demo"> World Famous Artisan </h1>
     <h2> 
       | <a href="/index.html">Home</a> |
       <a href="https://m.youtube.com/channel/UCj1pLz_ytvqdNwIVP03ck9g">Videos</a> |
