--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1 id="demo"> World Famous Artisan </h1>
-    <h2> 
+    <h2 id="ready"> 
       | <a href="/index.html">Home</a> |
       <a href="https://m.youtube.com/channel/UCj1pLz_ytvqdNwIVP03ck9g">Videos</a> |
       <a href="https://bubblegumstudios.itch.io/">Games</a> |
