--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>World Famous Artisan</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="stylesheet" href="styles.css">
+    <script src="fun.js"></script>
   </head>
   <body>
     <h1 id="demo"> World Famous Artisan </h1>
