--- a/index.html
+++ b/index.html
@@ -29,5 +29,5 @@
     <input type="color" id="bagcolor" name="bagcolor" value="#ffd6db"><br>
     <input type="submit" value="Enter" >
   </form>
-  <button onclick="document.getElementById('demo').innerHTML='AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAa'">Turn off the light</button>
+  <button onclick="myFunction()">Turn off the light</button>
 </html>
