--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="fun.js"></script>
   </head>
   <body>
-    <h1 id="demo"> World Famous Artisan </h1>
+    <h1 onclick="myFunction()" id="demo"> World Famous Artisan </h1>
     <h2 id="readonly"> 
       | <a href="/index.html">Home</a> |
       <a href="https://m.youtube.com/channel/UCj1pLz_ytvqdNwIVP03ck9g">Videos</a> |
@@ -29,5 +29,5 @@
     <input type="color" id="bagcolor" name="bagcolor" value="#ffd6db"><br>
     <input type="submit" value="Enter" >
   </form>
-  <button onclick="myFunction()">Turn off the light</button>
+  <button onclick="myFunction()">Don't Click this Button, Please.</button>
 </html>
