--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="fun.js"></script>
   </head>
   <body>
-    <h1 onclick="myFunction()" id="demo"> World Famous Artisan </h1>
+    <h1 onclick="myFunction()" id="header1"> World Famous Artisan </h1>
     <h2 id="readonly"> 
       | <a href="/index.html">Home</a> |
       <a href="https://m.youtube.com/channel/UCj1pLz_ytvqdNwIVP03ck9g">Videos</a> |
