--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <input type="text" id="lname" name="lname"><br>
     <label for="bagcolor">Background Color:</label><br>
     <input type="color" id="bagcolor" name="bagcolor" value="#ffd6db"><br>
-    <input type="submit" value="Enter" >
+    <button type="button" onclick="changeBGColor()">Change</button>
   </form>
   <button onclick="myFunction()">Don't Click this Button, Please.</button>
 </html>
