--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="fun.js"></script>
   </head>
-  <body id="body1>
+  <body id="body1">
     <h1 onclick="myFunction()" id="header1"> World Famous Artisan </h1>
     <h2 id="readonly"> 
       | <a href="/index.html">Home</a> |
