--- a/index.html
+++ b/index.html
@@ -21,13 +21,9 @@
     <p> red words go here </p>
   </body>
   <form align="center" onsubmit="myFunction()">
-    <label for="fname">First name:</label><br>
-    <input type="text" id="fname" name="fname"><br>
-    <label for="lname">Last name:</label><br>
-    <input type="text" id="lname" name="lname"><br>
     <label for="bagcolor">Background Color:</label><br>
     <input type="color" id="bagcolor" name="bagcolor" value="#ffd6db"><br>
-    <button type="button" onclick="changeBGColor()">Change</button>
+    <button type="button" onclick="changeColors()">Apply</button>
   </form>
   <button onclick="myFunction()">Don't Click this Button, Please.</button>
 </html>
