--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <p> red words go here </p>
   </body>
   <form align="center" onsubmit="myFunction()">
+    <label for="header1color">World Famous Color:</label><br>
+    <input type="color" id="header1color" name="header1color" value="#ea4486"><br>
     <label for="bagcolor">Background Color:</label><br>
     <input type="color" id="bagcolor" name="bagcolor" value="#ffd6db"><br>
     <button type="button" onclick="changeColors()">Apply</button>
