--- a/index.html
+++ b/index.html
@@ -28,4 +28,6 @@
     <button type="button" onclick="changeColors()">Apply</button>
   </form>
   <button onclick="myFunction()">Don't Click this Button, Please.</button>
+  <br>
+  <button onclick="setCookie(testing,my,1)"> cookie </button>
 </html>
