--- a/index.html
+++ b/index.html
@@ -29,5 +29,5 @@
   </form>
   <button onclick="myFunction()">Don't Click this Button, Please.</button>
   <br>
-  <button onclick="setCookie(testing,my,1)"> cookie </button>
+  <button onclick="setCookie('testing', 'my', 1)"> cookie </button>
 </html>
