--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
   </body>
   <form align="center" onsubmit="myFunction()">
     <label for="header1color">World Famous Color:</label><br>
-    <input type="color" id="header1color" name="header1color" value="#ea4486"><br>
+     <input type="color" id="header1color" name="header1color" value="#ea4486"><br>
     <label for="bagcolor">Background Color:</label><br>
-    <input type="color" id="bagcolor" name="bagcolor" value="#ffd6db"><br>
+     <input type="color" id="bagcolor" name="bagcolor" value="#ffd6db"><br>
     <button type="button" onclick="changeColors()">Apply</button>
   </form>
   <button onclick="myFunction()">Don't Click this Button, Please.</button>
   <br>
   <button onclick="setCookie('testing', 'my', 1)"> cookie </button>
+  <button onclick="cookieStart()"> get cookie </button>
 </html>
