--- a/index.html
+++ b/index.html
@@ -19,17 +19,19 @@
     <br>
     <p> There is no News at this time!</p>
     <p> red words go here </p>
+    <br>
   </body>
   <form align="center" onsubmit="myFunction()">
-    <label for="header1color">World Famous Color:</label><br>
-     <input type="color" id="header1color" name="header1color" value="#ea4486"><br>
-    <label for="bagcolor">Background Color:</label><br>
-     <input type="color" id="bagcolor" name="bagcolor" value="#ffd6db"><br>
+    <label for="header1color">World Famous Colors:</label>
+    <br>
+     <input type="color" id="header1color" name="header1color" value="#ea4486">
+     <input type="color" id="bagcolor" name="bagcolor" value="#ffd6db">
+     <br>
     <button type="button" onclick="changeColors()">Apply</button>
   </form>
-  <button onclick="myFunction()">Don't Click this Button, Please.</button>
-  <br>
-  <button onclick="setCookie('testing', 'my', 1)"> cookie </button>
-  <button onclick="cookieStart()"> get cookie </button>
+  
+  <!--- Post Loading Scripts --->
   <script type="text/javascript">cookieStart();</script>
+  
+  
 </html>
