--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </h2>
     <br>
     <br>
-    <p> There is no News at this time!</p>
+    <p id="header1"> There is no News at this time!</p>
     <p> red words go here </p>
     <br>
   </body>
