--- a/index.html
+++ b/index.html
@@ -17,7 +17,20 @@
     </h2>
     <br>
     <br>
-    <p id="p1"> There is no News at this time!</p>
+    <p id="p1"> As of December 6th 2021, the new Schedule will be put into place!
+     <br> <b>Comic Updates:</b> Monday - Friday
+     <br> <b>New Videos:</b> Every Monday
+     <br> <b>Dev Logs:</b> Every Friday
+     <br> This new schedule is possible because of the iminent end to my current employment. there is however another side effect of the end
+      of my current employment, a lack of income. Not to worry though, I have built up a small savings and plan to live off of this 
+      for as long as possible. Luckily, my lifestyle is exceptionaly CHEAP! at as little as $300/month, I can cover all my basic needs.
+      Of course, my savings wont last forever, in time I may have to put my work back on hiatus to seek gainful employment once again. If you enjoy 
+      the content that I produce, and would like to see it improve without interuption, you can support me through the links above! Be it a Sub on Youtube, a Follow on Itch.io,
+      or joining the Dawnsomewhere Discord. Building a community is the first step in continueing our creative works.
+    <br>
+    <br>
+     - Thank You,
+    <br> ArtisanBubblegum</p>
     <br>
   </body>
   <form align="center" onsubmit="myFunction()">
