--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>World Famous Artisan</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8">
+		<link rel="stylesheet" href="styles.css">
     <script src="fun.js"></script>
     <script type="module">
       // Find the latest version by visiting https://cdn.skypack.dev/three
