--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       import * as THREE from 'https://cdn.skypack.dev/three@0.134.0';
       const scene = new THREE.Scene();
     </script>
-		<script src="js/three.js"></script>
-  </head>
+		<script src="https://cdn.skypack.dev/-/three@v0.134.0-dfARp6tVCbGvQehLfkdx/dist=es2019,mode=imports/optimized/three.js"></script>
+		</head>
   <body id="body1">
     <h1 onclick="myFunction()" id="header1"> World Famous Artisan </h1>
     <h2 id="readonly"> 
