--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
   <head>
     <title>World Famous Artisan</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
- 		<meta charset="utf-8">
+		<meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
     <script src="fun.js"></script>
     <script type="module">
       // Find the latest version by visiting https://cdn.skypack.dev/three
-      import * as THREE from 'https://cdn.skypack.dev/three@0.134.0';
+      import * as THREE from '/three.js';
       const scene = new THREE.Scene();
     </script>
-		<script src="https://cdn.skypack.dev/-/three@v0.134.0-dfARp6tVCbGvQehLfkdx/dist=es2019,mode=imports/optimized/three.js"></script>
 		</head>
   <body id="body1">
     <h1 onclick="myFunction()" id="header1"> World Famous Artisan </h1>
