--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <script type="module">
       // Find the latest version by visiting https://cdn.skypack.dev/three
       import * as THREE from '/three.js';
+			<script src="/three.js"></script>
       const scene = new THREE.Scene();
     </script>
-		</head>
+	</head>
   <body id="body1">
     <h1 onclick="myFunction()" id="header1"> World Famous Artisan </h1>
     <h2 id="readonly"> 
