--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
     <script src="fun.js"></script>
-    <script src="/three.js"></script>
+    <!--- <script src="/three.js"></script> --->
 		<script type="module">
       // Find the latest version by visiting https://cdn.skypack.dev/three
       import * as THREE from '/three.js';
-			const scene = new THREE.Scene();
+			<!--- const scene = new THREE.Scene(); --->
     </script>
 	</head>
   <body id="body1">
