--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <title>World Famous Artisan</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 		<meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="styles.css">
     <script src="fun.js"></script>
     <!--- <script src="/three.js"></script> --->
 		<script type="module">
       // Find the latest version by visiting https://cdn.skypack.dev/three
-      import * as THREE from '/three.js';
-			<!--- const scene = new THREE.Scene(); --->
+      import * as 'THREE' from '/three.js';
+			const scene = new THREE.Scene();
     </script>
 	</head>
   <body id="body1">
