--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 		<link rel="stylesheet" href="styles.css">
     <script src="fun.js"></script>
-    <!--- <script src="/three.js"></script> --->
-		<script type="module">
-      // Find the latest version by visiting https://cdn.skypack.dev/three
+    <script src="/three.js"></script>
+		<!--- <script type="module">
       import * as 'THREE' from '/three.js';
 			const scene = new THREE.Scene();
-    </script>
+    </script> --->
 	</head>
   <body id="body1">
     <h1 onclick="myFunction()" id="header1"> World Famous Artisan </h1>
