--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
 
       camera.position.z = 5;
 			
+			function animate() {
+				requestAnimationFrame( animate );
+				renderer.render( scene, camera );
+			}
 			animate();
     </script>
     
