--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
      - Thank You,
     <br> ArtisanBubblegum</p>
     <br>
-    
+	</body>
+	<body id="3dback" style="z-index:-100">
     <script>
       const scene = new THREE.Scene();
       const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
