--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     <br> ArtisanBubblegum</p>
     <br>
 	</body>
-	<body id="3dback" style="z-index:-100">
+	
+  <body id="3dback" style="position:fixed;z-index:-100">
     <script>
       const scene = new THREE.Scene();
       const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
