--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <br>
 	</body>
 	
-  <body id="3dback" style="position:fixed;z-index:-100">
+  <div id="3dback" style="position:fixed;z-index:-100">
     <script>
       const scene = new THREE.Scene();
       const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
@@ -54,15 +54,15 @@
       scene.add( cube );
 
       camera.position.z = 5;
-			
-			function animate() {
-				requestAnimationFrame( animate );
-				renderer.render( scene, camera );
-			}
+      
+      function animate() {
+        requestAnimationFrame( animate );
+        renderer.render( scene, camera );
+      }
 			animate();
     </script>
     
-  </body>
+  </div>
   
   <form align="center" onsubmit="myFunction()">
     <label for="header1color">World Famous Colors:</label>
