--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
      - Thank You,
     <br> ArtisanBubblegum</p>
     <br>
-	</body>
+  </body>
 	
-  <div id="3dback" style="position:fixed;z-index:-100">
+  <div class="3dback" style="position:fixed;z-index:-100">
     <script>
       const scene = new THREE.Scene();
       const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
