--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     }
   </style>
   
-  <div class="fixed" style="position:fixed;z-index:-100">
+  <div class="fixed">
     <script>
       const scene = new THREE.Scene();
       const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
