--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
       
       function animate() {
         requestAnimationFrame( animate );
+        cube.rotation.x = -0.1;
+        cube.rotation.y = 0.3;
         renderer.render( scene, camera );
       }
 			animate();
