--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
       
       const renderer = new THREE.WebGLRenderer();
-      renderer.setSize( window.innerWidth, window.innerHeight );
+      renderer.setSize( window.innerWidth/4, window.innerHeight/4 );
       document.body.appendChild( renderer.domElement );
       
       const geometry = new THREE.BoxGeometry();
