--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
   </body>
   
   <div class="fixed">
-    <p>
+    the rappa
+    <p> para
       <script>
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
