--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
       
-        const renderer = new THREE.WebGLRenderer();
+        const renderer = new THREE.WebGLRenderer( { canvas: threedcanvas } );
         renderer.setSize( window.innerWidth/4, window.innerHeight/4 );
         <!--- document.body.appendChild( renderer.domElement ); --->
-        var renderer = new THREE.WebGLRenderer( { canvas: threedcanvas } );
         
         const geometry = new THREE.BoxGeometry();
         const material = new THREE.MeshBasicMaterial( { color: 0x00ff00 } );
