--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
     <br>
   </body>
   
-  <canvas id="threedcanvas" width="200" height="100" style="border:1px solid #000000;"></canvas>
+  <div id="threeddiv" width="100%" text-align:"center">
+    <canvas id="threedcanvas" width=window.innerWidth/4 height=window.innerWidth/4 style="border:3px solid #000000;display:inline;"></canvas>
+  </div>
   
   <div class="fixed">
     the rappa
