--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <br>
   </body>
   
-  <div id="threeddiv" width="100%" text-align:"center">
+  <div id="threeddiv" width="100%" style="text-align:center">
     <canvas id="threedcanvas" width=window.innerWidth/4 height=window.innerWidth/4 style="border:3px solid #000000;display:inline;"></canvas>
   </div>
   
