--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <br>
   </body>
   
-  <div id="threeddiv" width="100%" style="text-align:center;z-index:-100;position:fixed;top:window.innerHeight/2;left:window.innerwidth/2;">
+  <div id="threeddiv" width="100%" style="text-align:center; position:fixed; top:window.innerHeight/2; left:window.innerwidth/2;">
     <canvas id="threedcanvas" width=window.innerWidth/4 height=window.innerWidth/4 style="border:3px solid #000000;display:inline;"></canvas>
   </div>
   
