--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <br>
   </body>
   
-  <div id="threeddiv" width="100%" style="position:fixed; top:window.innerHeight/2; left:window.innerwidth/2;">
+  <div id="threeddiv" width="100%" style="position:fixed; top:0; left:0;">
     <canvas id="threedcanvas" width=window.innerWidth/4 height=window.innerWidth/4 style="border:4px solid #0e0730;display:inline;"></canvas>
   </div>
   
