--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
       
         const renderer = new THREE.WebGLRenderer( { canvas: threedcanvas, alpha: true } );
-        renderer.setSize( window.innerWidth/4, window.innerHeight/4 );
+        renderer.setSize( window.innerWidth, window.innerHeight );
         <!--- document.body.appendChild( renderer.domElement ); --->
         
         const geometry = new THREE.BoxGeometry();
