--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <br>
      <input type="color" id="header1color" name="header1color" value="#ea4486">
      <input type="color" id="bagcolor" name="bagcolor" value="#ffd6db">
-     <input type="color" id="threecolor" name="threecolor" value="#ea4486">
+     <input type="color" id="threecolor" name="threecolor" value="#774659">
      <br>
     <button type="button" onclick="changeColors()">Apply</button>
   </form>
