--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         renderer.setSize( window.innerWidth-2, window.innerHeight-2 );
         <!--- document.body.appendChild( renderer.domElement ); --->
         
-        const geometry = new THREE.BoxGeometry();
+        const geometry = new THREE.TorusGeometry( 10, 3, 16, 100 );
         const material = new THREE.MeshBasicMaterial( { color: 0x774659 } );
         const cube = new THREE.Mesh( geometry, material );
         scene.add( cube );
