--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       for as long as possible. Luckily, my lifestyle is exceptionaly CHEAP! at as little as $300/month, I can cover all my basic needs.
       Of course, my savings wont last forever, in time I may have to put my work back on hiatus to seek gainful employment once again. If you enjoy 
       the content that I produce, and would like to see it improve without interuption, you can support me through the links above! Be it a Sub on Youtube, a Follow on Itch.io,
-      or joining the Dawnsomewhere Discord. Building a community is the first step in continueing our creative works.
+      or joining the Dawnsomewhere Discord. Building a community is the first step in continuing our creative works.
     <br>
     <br>
      - Thank You,
