--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     
     const geometry = new THREE.TorusGeometry( 12, 4, 16, 100 );
     <!--- const material = new THREE.MeshBasicMaterial( { color: 0x774659 } ); --->
-    const material = new Three.MeshLambertMaterial( { color: 0x774659 } );
+    const material = new THREE.MeshLambertMaterial( { color: 0x774659 } );
     const cube = new THREE.Mesh( geometry, material );
     scene.add( cube );
     
