--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     <!--- document.body.appendChild( renderer.domElement ); --->
     
     const geometry = new THREE.TorusGeometry( 12, 4, 16, 100 );
-    <!--- const material = new THREE.MeshBasicMaterial( { color: 0x774659 } ); --->
-    const material = new THREE.MeshLambertMaterial( { color: 0x774659 } );
+    const material = new THREE.MeshBasicMaterial( { color: 0x774659 } );
+    <!--- const material = new THREE.MeshLambertMaterial( { color: 0x774659 } ); --->
     const cube = new THREE.Mesh( geometry, material );
     scene.add( cube );
     
