--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <h1 onclick="myFunction()" id="header1"> World Famous Artisan </h1>
     <h2 id="readonly"> 
       | <a href="/index.html">Home</a> |
-      <a href="https://m.youtube.com/channel/UCj1pLz_ytvqdNwIVP03ck9g">Videos</a> |
-      <a href="https://bubblegumstudios.itch.io/">Games</a> |
-      <a href="https://questden.org/wiki/ArtisanBubblegum">Comics</a> |
-      <a href="https://discord.gg/V782kvCh9h">Discord</a> |
+      <a href="https://m.youtube.com/channel/UCj1pLz_ytvqdNwIVP03ck9g" target="_blank">Videos</a> |
+      <a href="https://bubblegumstudios.itch.io/" target="_blank">Games</a> |
+      <a href="https://questden.org/wiki/ArtisanBubblegum" target="_blank">Comics</a> |
+      <a href="https://discord.gg/V782kvCh9h" target="_blank">Discord</a> |
     </h2>
     <br>
     <br>
