--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <a href="https://m.youtube.com/channel/UCj1pLz_ytvqdNwIVP03ck9g" target="_blank">Videos</a> |
       <a href="https://bubblegumstudios.itch.io/" target="_blank">Games</a> |
       <a href="https://questden.org/wiki/ArtisanBubblegum" target="_blank">Comics</a> |
+      <a href="https://www.patreon.com/artisanbubblegum" target="_blank">Patreon</a>
       <a href="https://discord.gg/V782kvCh9h" target="_blank">Discord</a> |
     </h2>
     <br>
