--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
      <input type="color" id="bagcolor" name="bagcolor" value="#ffd6db">
      <input type="color" id="threecolor" name="threecolor" value="#774659">
      <br>
-    <button type="button" onclick="changeColors()">Apply</button>
+     <input type"checkbox" id="threebool" name="threebool" value="1">
+     <br>
+    <button type="button" onclick="changeCookies()">Apply</button>
   </form>
   
   <!--- Post Loading Scripts --->
