--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
      <input type="color" id="bagcolor" name="bagcolor" value="#ffd6db">
      <input type="color" id="threecolor" name="threecolor" value="#774659">
      <br>
-     <input type="checkbox" id="threebool" name="threebool" value="taurus">
+     <input type="checkbox" id="threebool" name="threebool" value="taurus" checked>
      <br>
     <button type="button" onclick="changeCookies()">Apply</button>
   </form>
