--- a/index.html
+++ b/index.html
@@ -95,5 +95,5 @@
   <!--- Post Loading Scripts --->
   <script type="text/javascript">cookieStart();</script>
   
-  
+  <a href="https://www.rpgmobob.com/fishing-spots">RPGMO Fish Cooking Calculator</a>
 </html>
