--- a/index.html
+++ b/index.html
@@ -95,5 +95,5 @@
   <!--- Post Loading Scripts --->
   <script type="text/javascript">cookieStart();</script>
   
-  <a href="https://www.rpgmobob.com/fishing-spots">RPGMO Fish Cooking Calculator</a>
+  <a href="https://docs.google.com/spreadsheets/d/1zw6q7MESRTBlL4qTPROcPNTCXEHY7pKUGD40a5AW51Q/edit?usp=sharing">RPGMO Fish Cooking Calculator</a>
 </html>
