--- a/index.html
+++ b/index.html
@@ -98,7 +98,10 @@
     <iframe align="center" width="560" height="315" src="https://www.youtube.com/embed/SXxw-R2vEH8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <br>
     
-    <a href="https://questden.org/kusaba/quest/res/978766.html#1016839" target="_blank"> Magic Elevator Quest! <br> Page 43!</a>
+    <a href="https://questden.org/kusaba/quest/res/978766.html#1016839" target="_blank"> Magic Elevator Quest! 
+      <br> Page 43!</a>
+    <br>
+    <br>
   </body>
     
   <a href="https://docs.google.com/spreadsheets/d/1zw6q7MESRTBlL4qTPROcPNTCXEHY7pKUGD40a5AW51Q/edit?usp=sharing" target="_blank">RPGMO Fish Cooking Calculator</a>
