--- a/index.html
+++ b/index.html
@@ -35,20 +35,21 @@
     </h2>
     <br>
     <br>
-    <p id="p1"> As of December 6th 2021, the new Schedule will be put into place!
+    <p id="p1">
      <br> <b>Comic Updates:</b> Monday - Friday
      <br> <b>New Videos:</b> Every Monday
      <br> <b>Dev Logs:</b> Every Friday
-     <br> This new schedule is possible because of the iminent end to my current employment. there is however another side effect of the end
-      of my current employment, a lack of income. Not to worry though, I have built up a small savings and plan to live off of this 
-      for as long as possible. Luckily, my lifestyle is exceptionaly CHEAP! at as little as $300/month, I can cover all my basic needs.
-      Of course, my savings wont last forever, in time I may have to put my work back on hiatus to seek gainful employment once again. If you enjoy 
-      the content that I produce, and would like to see it improve without interuption, you can support me through the links above! Be it a Sub on Youtube, a Follow on Itch.io,
-      or joining the Dawnsomewhere Discord. Building a community is the first step in continuing our creative works.
-    <br>
-    <br>
-     - Thank You,
-    <br> ArtisanBubblegum</p>
+     <br> It's been over a week since I quit my job to make content fulltime. I made a 3 minute animatic, and resumed Magic Elevator Quest.
+      I'll admit, I wasn't working as Diligently as I intended, but I've sorted out a more concrete work schedule. You can Expect 2 to 5 Updates on Magic 
+      Elevator Quest every weekday. And I'll have a Devlog ready for "The Big EggVenture", on Friday the 10th.
+     <br> Based on my Current Estimates, I should be able to comfortably fund this endevor through March 2022. By then, I may have to look into returning
+      to the workforce. This will of course put all active projects on Indefinite Hiatus.
+     <br> Any Support is greatly Apreciated! Even a Sub on Youtube, or Joining the Discord Server!
+     <br>
+      <br>
+      - Thank You,
+      <br> ArtisanBubblegum
+      <br> 6th December 2021</p>
     <br>
   </body>
   
