--- a/index.html
+++ b/index.html
@@ -39,11 +39,8 @@
      <br> <b>Comic Updates:</b> Monday - Friday
      <br> <b>New Videos:</b> Every Monday
      <br> <b>Dev Logs:</b> Every Friday
-     <br> It's been over a week since I quit my job to make content fulltime. I made a 3 minute animatic, and resumed Magic Elevator Quest.
-      I'll admit, I wasn't working as Diligently as I intended, but I've sorted out a more concrete work schedule. You can Expect 2 to 5 Updates on Magic 
-      Elevator Quest every weekday. And I'll have a Devlog ready for "The Big EggVenture", on Friday the 10th.
-     <br> Based on my Current Estimates, I should be able to comfortably fund this endevor through March 2022. By then, I may have to look into returning
-      to the workforce. This will of course put all active projects on Indefinite Hiatus.
+     <br> It's been over a week since I quit my job to make content fulltime. I made a 3 minute animatic, and resumed Magic Elevator Quest. I'll admit, I wasn't working as Diligently as I intended, but I've sorted out a more concrete work schedule. You can Expect 2 to 5 Updates on Magic Elevator Quest every weekday. And I'll have a Devlog ready for "The Big EggVenture", on Friday the 10th.
+     <br> Based on my Current Estimates, I should be able to comfortably fund this endevor through March 2022. By then, I may have to look into returning to the workforce. This will of course put all active projects on Indefinite Hiatus.
      <br> Any Support is greatly Apreciated! Even a Sub on Youtube, or Joining the Discord Server!
      <br>
       <br>
