--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <br>
     <br>
     <a href="https://questden.org/kusaba/quest/res/978766.html#1016974" target="_blank"> <img width="300" height="300" src="https://questden.org/kusaba/quest/src/160296923204.png" alt="Magic Elevator Quest! Page 46!"></a>
-     <a href="https://bubblegumstudios.itch.io/the-big-eggventure" target="_blank"> <img width="300" height="300" src="/EggIcon.png" alt="Big EggVenture!"></a>
+     <a href="https://bubblegumstudios.itch.io/the-big-eggventure" target="_blank"> <img width="300" height="300" src="/EggIconShort.png" alt="Big EggVenture!"></a>
     <br>
     <br>
   </body>
