--- a/index.html
+++ b/index.html
@@ -38,14 +38,13 @@
      <br> <b>New Videos:</b> Every Monday
      <br> <b>Dev Logs:</b> Every Friday
      <br>
-     <br> It's been over a week since I quit my job to make content fulltime. I made a 3 minute animatic, and resumed Magic Elevator Quest.
-      I'll admit, I wasn't working as Diligently as I intended, but I've sorted out a more concrete work schedule. You can Expect 
-      2 to 5 Updates on Magic Elevator Quest every weekday. And I'll have a Devlog ready for "The Big EggVenture", on Friday the 10th.
+     <br> Another Week, Another Video! I didn't have anything coordinated properly, so I ended up having to do all my recording Saturday and Sunday. 
+      Then stay up late to finish the editing. Even then, I had some extra work to finish this morning before I was satisfied with the Final Video.
+      As made Evident in the Video, I play Old School Runescape, my name is ArtisanHuman! I'm not on very often, buy I'm always happy to hangout or help,
+      just Ping Me on the <a href="" target="_blank">Discord Server!</a>
+      <br> I also play RPG MO, Path of Exile, Book of Travels, and Monster Hunter Rise, about as frequently as I do OSRS.
      <br>
-     <br> I should be able to comfortably fund this endevor through March 2022. By then, I may have to look into returning to the workforce.
-      This will of course put all active projects on Indefinite Hiatus.
-     <br>
-     <br> Any Support is greatly Apreciated! Even a Sub on Youtube, or Joining the Discord Server!
+     <br> My Creations are made possible by your Support! Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
      <br>
      <br>
      - Thank You,
@@ -107,6 +106,21 @@
     
   <!---
     Archive:
+
+    <br> It's been over a week since I quit my job to make content fulltime. I made a 3 minute animatic, and resumed Magic Elevator Quest.
+      I'll admit, I wasn't working as Diligently as I intended, but I've sorted out a more concrete work schedule. You can Expect 
+      2 to 5 Updates on Magic Elevator Quest every weekday. And I'll have a Devlog ready for "The Big EggVenture", on Friday the 10th.
+     <br>
+     <br> I should be able to comfortably fund this endevor through March 2022. By then, I may have to look into returning to the workforce.
+      This will of course put all active projects on Indefinite Hiatus.
+     <br>
+     <br> Any Support is greatly Apreciated! Even a Sub on Youtube, or Joining the Discord Server!
+     <br>
+     <br>
+     - Thank You,
+     <br> ArtisanBubblegum
+     <br> 6th December 2021</p>
+    <br>
 
     26th November 2021:
       <p id="archiveP"> As of December 6th 2021, the new Schedule will be put into place!
