--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
      <br> Another Week, Another Video! I didn't have anything coordinated properly, so I ended up having to do all my recording Saturday and Sunday. 
       Then stay up late to finish the editing. Even then, I had some extra work to finish this morning before I was satisfied with the Final Video.
       As made Evident in the Video, I play Old School Runescape, my name is ArtisanHuman! I'm not on very often, buy I'm always happy to hangout or help,
-      just Ping Me on the <a href="" target="_blank">Discord Server!</a>
+      just Ping Me on the <a href="https://discord.gg/V782kvCh9h" target="_blank">Discord Server!</a>
       <br> I also play RPG MO, Path of Exile, Book of Travels, and Monster Hunter Rise, about as frequently as I do OSRS.
      <br>
      <br> My Creations are made possible by your Support! Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
