--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@
       As made Evident in the Video, I play Old School Runescape, my name is ArtisanHuman! I'm not on very often, buy I'm always happy to hangout or help,
       just Ping ArtisanBubblegum on the <a href="https://discord.gg/V782kvCh9h" target="_blank">Discord Server!</a>
       <br> I also play RPG MO, Path of Exile, Book of Travels, and Monster Hunter Rise, about as frequently as I do OSRS.
+      <br> This Friday, I'll have a basic Tutorial level built for EggVenture. And I hope to find a way to make the wall jumping feel more satisfying by then too.
      <br>
-     <br> My Creations are made possible by your Support! Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
+     <br> My Creations are made possible by your Support! <br>Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
      <br>
      <br>
      - Thank You,
      <br> ArtisanBubblegum
-     <br> 6th December 2021</p>
+     <br> 13th December 2021</p>
     <br>
   </body>
   
